--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid_calculator",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -10,10 +10,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
     "solid-js": "^1.6.10"
-  }
-,"author":"joaovictorjs"}
+  },
+  "author": ""
+}
